package org.ocp;

public interface IBook {
    String getName();

    int getPrice();

    String getAuthor();
}
